# proxy_parser

./: .gitignore  Dockerfile  README.md  config.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
proxy_parser/: __main__.py  checkers.py  cli.py  config.py  file_operations.py  http_client.py  main.py  orchestrator.py  parsers.py
sources/: http.txt  https.txt  socks4.txt  socks5.txt
tests/: test_checkers.py  test_filemanagers.py  test_main.py  test_parsers.py
