[project]
name = "proxy-parser"
version = "1.0.0"
description = "A tool for scraping and validating free proxies from GitHub"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Alexey Naidiuk", email = "alexeynaidiuk@gmail.com"}
]
keywords = ["proxy", "scraper", "validation", "github", "httpx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "httpx[socks]>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "requests>=2.32.4",
    "loguru",
    "aiohttp>=3.12.15",
]

[dependency-groups]
dev = [
    "orjson>=3.11.3",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.24.0",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
